--- a/kien-thuc/he-mat-troi.html
+++ b/kien-thuc/he-mat-troi.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-permalink: /lich-thien-van/nam-2022/
-title: Lịch thiên văn năm 2022
+permalink: /kien-thuc/he-mat-troi/
+title: Hệ mặt trời
 ---
 
 {% assign postsByYearMonth = site.categories.Nam-2022 | group_by_exp:"post", "post.date | date: '%m'"  %}
