--- a/lich-thien-van/nam-2022.html
+++ b/lich-thien-van/nam-2022.html
@@ -29,7 +29,7 @@ title: Lịch thiên văn năm 2022
                             <div title="{{ post.title }}" class="blog-post border-radius-5px bg-white box-shadow-medium">
                                 <div class="blog-post-image bg-medium-slate-blue">
                                     <a href="{{ post.url }}" title="{{ post.title }}">
-                                        <img src="{{ site.baseurl }}/images/lich-thien-van/post/{{ post.image }}.jpg" alt="">
+                                        <img src="{{ site.baseurl }}/images/lich-thien-van/post/{{ post.image }}.webp" alt="">
                                     </a>
                                     <a href="{{ post.url }}" class="blog-category alt-font font-weight-600">Ngày {{ post.thoigian }}/{{ post.date | date: "%m" }}</a>
                                 </div>
