--- a/_posts/kien-thuc/he-mat-troi/2021-04-01-mat-troi.html
+++ b/_posts/kien-thuc/he-mat-troi/2021-04-01-mat-troi.html
@@ -6,7 +6,29 @@ categories: [Kien-thuc, He-mat-troi]
 image: mat-troi
 modal: mat-troi
 ---
-<p class="text-white">Quadrantids là một trận mưa sao băng trên mức trung bình, với khoảng 40 sao băng mỗi giờ tại cực điểm. Trận mưa sao băng này được cho là bắt nguồn từ các hạt bụi để lại bởi sao chổi đã “tuyệt chủng” 2003 EH1, được phát hiện năm 2003.</p>
-<p class="text-white">Các sao băng Quadrantids thường xuất hiện từ ngày 01 đến ngày 05 tháng 01 hằng năm. Cực điểm năm nay của Quadrantids rơi vào đêm ngày 03, rạng sáng ngày 04 tháng 01.</p>
-<p class="text-white">Trăng thượng huyền sẽ lặn sớm sau nửa đêm để lại bầu trời đêm tối thuận lợi cho một buổi quan sát mưa sao băng.</p>
-<p class="text-white">Thời gian quan sát tốt nhất là sau nửa đêm tại khu vực tối, thoáng đãng. Các sao băng sẽ bắt nguồn từ chòm sao Bootes, nhưng cũng có thể xuất hiện bất cứ đâu trên bầu trời.</p>
+<div class="know_detail">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-4 md-margin-30px-bottom">
+                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                    <h6 class="alt-font font-weight-600">
+                        {{ page.title | escape }}
+                    </h6>
+                    <p><strong>Nhiệt độ bề mặt: </strong>5.778 K</p>
+                    <p><strong>Mật độ: </strong>1,41 g/cm³</p>
+                    <p><strong>Khối lượng: </strong>1,989E30 kg</p>
+                    <p><strong>Tuổi: </strong>4,603E9 năm</p>
+                    <p><strong>Loại quang phổ: </strong>G2V</p>
+                </div>
+            </div>
+            <div class="col-12 col-lg-8">
+                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                    <p>Mặt Trời là ngôi sao ở trung tâm Hệ Mặt Trời, chiếm khoảng 99,86% khối lượng của Hệ Mặt Trời. Trái Đất và các thiên thể khác như các hành tinh, tiểu hành tinh, thiên thạch, sao chổi, và bụi quay quanh Mặt Trời.</p>
+                    <p>Khoảng cách trung bình giữa Mặt Trời và Trái Đất xấp xỉ 149,6 triệu kilômét (1 Đơn vị thiên văn AU) nên ánh sáng Mặt Trời cần 8 phút 19 giây mới đến được Trái Đất. Trong một năm, khoảng cách này thay đổi từ 147,1 triệu kilômét (0,9833 AU) ở điểm cận nhật (khoảng ngày 3 tháng 1), tới xa nhất là 152,1 triệu kilômét (1,017 AU) ở điểm viễn nhật (khoảng ngày 4 tháng 7).</p>
+                    <p>Năng lượng Mặt Trời ở dạng ánh sáng hỗ trợ cho hầu hết sự sống trên Trái Đất thông qua quá trình quang hợp, và điều khiển khí hậu cũng như thời tiết trên Trái Đất. Thành phần của Mặt Trời gồm hydro (khoảng 74% khối lượng, hay 92% thể tích), heli (khoảng 24% khối lượng, 7% thể tích), và một lượng nhỏ các nguyên tố khác, gồm sắt, nickel, oxy, silic, lưu huỳnh, magiê, carbon, neon, canxi, và crom.</p>
+                    <p>Mặt Trời có hạng quang phổ G2V. G2 có nghĩa nó có nhiệt độ bề mặt xấp xỉ 5.778 K (5.505 °C) khiến nó có màu trắng, và thường có màu vàng khi nhìn từ bề mặt Trái Đất bởi sự tán xạ khí quyển. Chính sự tán xạ này của ánh sáng ở giới hạn cuối màu xanh của quang phổ khiến bầu trời có màu xanh. Quang phổ Mặt Trời có chứa các vạch ion hoá và kim loại trung tính cũng như các đường hydro rất yếu. V (số 5 La Mã) trong lớp quang phổ thể hiện rằng Mặt Trời, như hầu hết các ngôi sao khác, là một ngôi sao thuộc dãy chính. Điều này có nghĩa nó tạo ra năng lượng bằng tổng hợp hạt nhân của hạt nhân hydro thành heli. Có hơn 100 triệu ngôi sao lớp G2 trong Ngân Hà của chúng ta. Từng bị coi là một ngôi sao nhỏ và khá tầm thường nhưng thực tế theo hiểu biết hiện tại, Mặt Trời sáng hơn 85% các ngôi sao trong Ngân Hà với đa số là các sao lùn đỏ.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
