--- a/_posts/kien-thuc/he-mat-troi/2021-04-01-mat-troi.html
+++ b/_posts/kien-thuc/he-mat-troi/2021-04-01-mat-troi.html
@@ -8,20 +8,43 @@ modal: mat-troi
 ---
 <div class="know_detail">
     <div class="container">
-        <div class="row">
-            <div class="col-12 col-lg-4 md-margin-30px-bottom">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
-                    <h6 class="alt-font font-weight-600">
-                        {{ page.title | escape }}
-                    </h6>
-                    <p><strong>Nhiệt độ bề mặt: </strong>5.778 K</p>
-                    <p><strong>Mật độ: </strong>1,41 g/cm³</p>
-                    <p><strong>Khối lượng: </strong>1,989E30 kg</p>
-                    <p><strong>Tuổi: </strong>4,603E9 năm</p>
-                    <p><strong>Loại quang phổ: </strong>G2V</p>
+        <div class="row justify-content-center">
+            <div class="col-md-12 text-center">
+                <h5 class="alt-font font-weight-600 text-white margin-3-rem-bottom md-margin-2-rem-bottom">
+                    {{ page.title | escape }}
+                </h5>
+            </div>
+        </div>
+        <div class="border-radius-6px">
+            <div class="row">
+                <div class="col-12 col-lg-8 margin-30px-bottom">
+                    <div class='model-viewer-container'>
+                        <model-viewer ar background-color='black' camera-controls camera-orbit='0deg 75deg 120%' controls exposure='1' id='mbmv' interaction-prompt-threshold='1000'
+                          preload reveal='auto' shadow-intensity='1'
+                          shadow-softness='0'
+                          src='https://namgd.com/projects/thienvanhoc/planet-3d-model/2352_Sun_1_1391000.glb'>
+                          <div class="fullscreen model-viewer-box" data-toggle-fullscreen=""></div>
+                        </model-viewer>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 margin-30px-bottom">
+                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                        <h6 class="alt-font font-weight-600">
+                            {{ page.title | escape }}
+                        </h6>
+                        <p><strong>Nhiệt độ bề mặt: </strong>5.778 K</p>
+                        <p><strong>Mật độ: </strong>1,41 g/cm³</p>
+                        <p><strong>Khối lượng: </strong>1,989E30 kg</p>
+                        <p><strong>Tuổi: </strong>4,603E9 năm</p>
+                        <p><strong>Loại quang phổ: </strong>G2V</p>
+                    </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-8">
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-12">
                 <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
                     <p>Mặt Trời là ngôi sao ở trung tâm Hệ Mặt Trời, chiếm khoảng 99,86% khối lượng của Hệ Mặt Trời. Trái Đất và các thiên thể khác như các hành tinh, tiểu hành tinh, thiên thạch, sao chổi, và bụi quay quanh Mặt Trời.</p>
                     <p>Khoảng cách trung bình giữa Mặt Trời và Trái Đất xấp xỉ 149,6 triệu kilômét (1 Đơn vị thiên văn AU) nên ánh sáng Mặt Trời cần 8 phút 19 giây mới đến được Trái Đất. Trong một năm, khoảng cách này thay đổi từ 147,1 triệu kilômét (0,9833 AU) ở điểm cận nhật (khoảng ngày 3 tháng 1), tới xa nhất là 152,1 triệu kilômét (1,017 AU) ở điểm viễn nhật (khoảng ngày 4 tháng 7).</p>
