--- a/_posts/kien-thuc/he-mat-troi/2021-04-03-sao-kim.html
+++ b/_posts/kien-thuc/he-mat-troi/2021-04-03-sao-kim.html
@@ -4,21 +4,53 @@ title: "Sao Kim"
 date:   03-04-2021
 categories: [Kien-thuc, He-mat-troi]
 image: sao-kim
-modal: sao-kim
+model: sao-kim
 ---
-
-<h5 class="alt-font font-weight-500 text-white margin-4-half-rem-bottom">
-    Ngày {{ page.thoigian }}/{{ page.date | date: "%m/%Y" }}: {{ page.title | escape }}
-</h5>
-<img 
-    src="{{ site.baseurl }}/images/lich-thien-van/post/{{ site.data.calendar_image.calendar_image[10].properties }}" 
-    alt='Ngày {{ page.thoigian }}/{{ page.date | date: "%m/%Y" }}: {{ page.title | escape }}'
-    title='Ngày {{ page.thoigian }}/{{ page.date | date: "%m/%Y" }}: {{ page.title | escape }}'
-    class="w-100 border-radius-6px margin-4-half-rem-bottom" 
-/>
-
-
-<p class="text-white">Quadrantids là một trận mưa sao băng trên mức trung bình, với khoảng 40 sao băng mỗi giờ tại cực điểm. Trận mưa sao băng này được cho là bắt nguồn từ các hạt bụi để lại bởi sao chổi đã “tuyệt chủng” 2003 EH1, được phát hiện năm 2003.</p>
-<p class="text-white">Các sao băng Quadrantids thường xuất hiện từ ngày 01 đến ngày 05 tháng 01 hằng năm. Cực điểm năm nay của Quadrantids rơi vào đêm ngày 03, rạng sáng ngày 04 tháng 01.</p>
-<p class="text-white">Trăng thượng huyền sẽ lặn sớm sau nửa đêm để lại bầu trời đêm tối thuận lợi cho một buổi quan sát mưa sao băng.</p>
-<p class="text-white">Thời gian quan sát tốt nhất là sau nửa đêm tại khu vực tối, thoáng đãng. Các sao băng sẽ bắt nguồn từ chòm sao Bootes, nhưng cũng có thể xuất hiện bất cứ đâu trên bầu trời.</p>
+<div class="know_detail">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 text-center">
+                <h5 class="alt-font font-weight-600 text-white margin-3-rem-bottom md-margin-2-rem-bottom">
+                    {{ page.title | escape }}
+                </h5>
+            </div>
+        </div>
+        <div class="border-radius-6px">
+            <div class="row">
+                <div class="col-12 col-lg-8 margin-30px-bottom">
+                    <div class='model-viewer-container'>
+                        <model-viewer ar background-color='black' camera-controls camera-orbit='0deg 75deg 120%' controls exposure='1' id='mbmv' interaction-prompt-threshold='1000'
+                          preload reveal='auto' shadow-intensity='1'
+                          shadow-softness='0'
+                          src='{{ site.baseurl }}/app/planet-3d-model/model/{{ page.model | escape }}.glb'>
+                          <div class="fullscreen model-viewer-box" data-toggle-fullscreen=""></div>
+                        </model-viewer>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 margin-30px-bottom">
+                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                        <h6 class="alt-font font-weight-600">
+                            {{ page.title | escape }}
+                        </h6>
+                        <p><strong>Khoảng cách từ Mặt trời: </strong>108.200.000 km</p>
+                        <p><strong>Mật độ: </strong>5,24 g/cm³</p>
+                        <p><strong>Diện tích bề mặt: </strong>460.200.000 km²</p>
+                        <p><strong>Chu kỳ quay: </strong>225 ngày</p>
+                        <p><strong>Bán kính: </strong>6.051,8 km</p>
+                        <p><strong>Khối lượng: </strong>4,867E24 kg (0,815 M⊕)</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-12">
+                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                    <p>Sao Kim là hành tinh thứ hai trong hệ Mặt Trời, tự quay quanh nó với chu kỳ 224,7 ngày Trái Đất. Xếp sau Mặt Trăng, nó là thiên thể tự nhiên sáng nhất trong bầu trời tối, với cấp sao biểu kiến bằng −4.6, đủ sáng để tạo nên bóng trên mặt nước. Bởi vì Sao Kim là hành tinh phía trong tính từ Trái Đất, nó không bao giờ xuất hiện trên bầu trời mà quá xa Mặt Trời: góc ly giác đạt cực đại bằng 47,8°. Sao Kim đạt độ sáng lớn nhất ngay sát thời điểm hoàng hôn hoặc bình minh, do vậy mà dân gian còn gọi là sao Hôm, khi hành tinh này hiện lên lúc hoàng hôn, và sao Mai, khi hành tinh này hiện lên lúc bình minh.</p>
+                    <p>Sao Kim được xếp vào nhóm hành tinh đất đá và đôi khi người ta còn coi nó là "hành tinh chị em" với Trái Đất do kích cỡ, gia tốc hấp dẫn, tham số quỹ đạo gần giống với Trái Đất. Tuy nhiên, người ta đã chỉ ra rằng nó rất khác Trái Đất trên những mặt khác. Sao Kim bị bao bọc bởi lớp mây dày có tính phản xạ cao chứa axít sunfuric, và khiến chúng ta không thể quan sát bề mặt của nó dưới bước sóng ánh sáng khả kiến. Mật độ không khí trong khí quyển của nó lớn nhất trong số bốn hành tinh đất đá, thành phần chủ yếu là cacbon điôxít. Áp suất khí quyển tại bề mặt hành tinh cao gấp 92 lần so với của Trái Đất. Với nhiệt độ bề mặt trung bình bằng 735 K (462 °C), Sao Kim là hành tinh nóng nhất trong Hệ Mặt Trời. Nó không có chu trình cacbon để đưa cacbon trở lại đá và đất trên bề mặt, do vậy không thể có một tổ chức sống hữu cơ nào có thể hấp thụ nó trong sinh khối. Một số nhà khoa học từng cho rằng Sao Kim đã có những đại dương trong quá khứ, nhưng đã bốc hơi khi nhiệt độ hành tinh tăng lên do hiệu ứng nhà kính mất kiểm soát. Nước có thể đã bị quang ly, và bởi vì không có từ quyển hành tinh, hiđrô tự do có thể thoát vào vũ trụ bởi tác động của gió Mặt Trời. Toàn bộ bề mặt của Sao Kim là một hoang mạc khô cằn với đá và bụi và có lẽ vẫn còn núi lửa hoạt động trên hành tinh này.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
