--- a/_posts/kien-thuc/he-mat-troi/2021-04-02-sao-thuy.html
+++ b/_posts/kien-thuc/he-mat-troi/2021-04-02-sao-thuy.html
@@ -2,7 +2,7 @@
 layout: know_detail
 title: "Sao Thủy"
 date:   02-04-2021
-categories: [Kien-thuc, He-mat-troi]
+categories: [Kien-thuc, He-mat-troi, Hanh-tinh]
 image: sao-thuy
 model: sao-thuy
 ---
