--- a/_posts/kien-thuc/he-mat-troi/2021-04-03-sao-kim.html
+++ b/_posts/kien-thuc/he-mat-troi/2021-04-03-sao-kim.html
@@ -2,7 +2,7 @@
 layout: know_detail
 title: "Sao Kim"
 date:   03-04-2021
-categories: [Kien-thuc, He-mat-troi]
+categories: [Kien-thuc, He-mat-troi, Hanh-tinh]
 image: sao-kim
 model: sao-kim
 ---
