--- a/_posts/kien-thuc/he-mat-troi/2021-04-04-trai-dat.html
+++ b/_posts/kien-thuc/he-mat-troi/2021-04-04-trai-dat.html
@@ -2,7 +2,7 @@
 layout: know_detail
 title: "Trái Đất"
 date:   04-04-2021
-categories: [Kien-thuc, He-mat-troi]
+categories: [Kien-thuc, He-mat-troi, Hanh-tinh]
 image: trai-dat
 model: trai-dat
 ---
