--- a/_posts/kien-thuc/he-mat-troi/2021-04-07-sao-tho.html
+++ b/_posts/kien-thuc/he-mat-troi/2021-04-07-sao-tho.html
@@ -2,7 +2,7 @@
 layout: know_detail
 title: "Sao Thổ"
 date:   07-04-2021
-categories: [Kien-thuc, He-mat-troi]
+categories: [Kien-thuc, He-mat-troi, Hanh-tinh]
 image: sao-tho
 model: sao-tho
 ---
