--- a/_posts/kien-thuc/he-mat-troi/2021-04-08-sao-thien-vuong.html
+++ b/_posts/kien-thuc/he-mat-troi/2021-04-08-sao-thien-vuong.html
@@ -2,7 +2,7 @@
 layout: know_detail
 title: "Sao Thiên Vương"
 date:   08-04-2021
-categories: [Kien-thuc, He-mat-troi]
+categories: [Kien-thuc, He-mat-troi, Hanh-tinh]
 image: sao-thien-vuong
 model: sao-thien-vuong
 ---
