--- a/_posts/kien-thuc/he-mat-troi/2021-04-05-sao-hoa.html
+++ b/_posts/kien-thuc/he-mat-troi/2021-04-05-sao-hoa.html
@@ -2,7 +2,7 @@
 layout: know_detail
 title: "Sao Hỏa"
 date:   05-04-2021
-categories: [Kien-thuc, He-mat-troi]
+categories: [Kien-thuc, He-mat-troi, Hanh-tinh]
 image: sao-hoa
 model: sao-hoa
 ---
