--- a/_posts/kien-thuc/he-mat-troi/2021-04-06-sao-moc.html
+++ b/_posts/kien-thuc/he-mat-troi/2021-04-06-sao-moc.html
@@ -2,7 +2,7 @@
 layout: know_detail
 title: "Sao Mộc"
 date:   06-04-2021
-categories: [Kien-thuc, He-mat-troi]
+categories: [Kien-thuc, He-mat-troi, Hanh-tinh]
 image: sao-moc
 model: sao-moc
 ---
