--- a/_posts/kien-thuc/he-mat-troi/2021-04-09-sao-hai-vuong.html
+++ b/_posts/kien-thuc/he-mat-troi/2021-04-09-sao-hai-vuong.html
@@ -2,7 +2,7 @@
 layout: know_detail
 title: "Sao Hải Vương"
 date:   09-04-2021
-categories: [Kien-thuc, He-mat-troi]
+categories: [Kien-thuc, He-mat-troi, Hanh-tinh]
 image: sao-hai-vuong
 model: sao-hai-vuong
 ---
