Update link slide

--- a/_posts/kien-thuc/he-mat-troi/2021-04-01-mat-troi.html
+++ b/_posts/kien-thuc/he-mat-troi/2021-04-01-mat-troi.html
@@ -2,7 +2,8 @@
 layout: know_detail
 title: "Mặt Trời"
 date:   01-04-2021
-categories: [Kien-thuc, He-mat-troi, Mat-troi]
+categories: [Kien-thuc, He-mat-troi]
+tag: Mat-troi
 image: mat-troi
 model: mat-troi
 ---
