--- a/kien-thuc/he-mat-troi.html
+++ b/kien-thuc/he-mat-troi.html
@@ -1,45 +1,94 @@
 ---
 layout: page
 permalink: /kien-thuc/he-mat-troi/
-title: Hệ mặt trời
+title: Hệ Mặt Trời
 ---
-<!-- start section --> 
+<!-- Mặt Trời và các hành tinh -->
 <section class="bg-dark padding-eleven-lr xl-padding-two-lr xs-no-padding-lr">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row margin-3-rem-bottom md-margin-2-rem-bottom align-items-center">
             <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
                 <h5 class="alt-font font-weight-600 text-white text-uppercase margin-5px-bottom letter-spacing-minus-1px">
-                    {{ page.title}}
+                   Mặt Trời và các hành tinh
                 </h5>
             </div>
         </div>
         <div class="row">
-            <div class="col-12 blog-content">
-                <ul class="blog-grid blog-wrapper grid grid-loading grid-4col xl-grid-4col lg-grid-3col md-grid-2col sm-grid-2col xs-grid-1col gutter-extra-large">
-                    <li class="grid-sizer"></li>
-                    <!-- start blog item -->
-                    {% for post in site.categories.Kien-thuc reversed %}
-                        {% if post.categories contains "He-mat-troi" %}
-                        <li class="grid-item wow animate__fadeIn">
-                            <div title="{{ post.title }}" class="blog-post border-radius-5px bg-white box-shadow-medium">
-                                <div class="blog-post-image bg-medium-slate-blue">
-                                    <a href="{{ post.url }}" title="{{ post.title }}">
-                                        <img src="{{ site.baseurl }}/images/kien-thuc//category/he-mat-troi/{{ post.image }}.webp" alt="">
-                                    </a>
-                                </div>
-                                <div class="post-details padding-2-rem-lr padding-1-half-rem-tb bg-black text-center">
-                                    <a href="{{ post.url }}" title="{{ post.title }}" class="alt-font font-weight-600 text-extra-medium text-very-light-white-transparent">
-                                        {{ post.title }}
-                                    </a>
+            <div class="col-12">
+                <div class="swiper-container text-center" data-slider-options='{ "slidesPerView": 1, "loop": true, "navigation": { "nextEl": ".swiper-button-next-nav", "prevEl": ".swiper-button-previous-nav" }, "autoplay": { "delay": 3000, "disableOnInteraction": false }, "keyboard": { "enabled": true, "onlyInViewport": true }, "breakpoints": { "1200": { "slidesPerView": 4 }, "992": { "slidesPerView": 3 }, "768": { "slidesPerView": 3 } } }'>
+                    <div class="swiper-wrapper">
+                        {% for post in site.categories.Kien-thuc reversed %}
+                            {% if post.categories contains "He-mat-troi" and post.categories contains "Hanh-tinh" or post.tag contains "Mat-troi" %}
+                            <div class="swiper-slide padding-2-rem-lr">
+                                <div title="{{ post.title }}" class="blog-post border-radius-5px bg-white box-shadow-medium">
+                                    <div class="blog-post-image bg-medium-slate-blue">
+                                        <a href="{{ post.url }}" title="{{ post.title }}">
+                                            <img src="{{ site.baseurl }}/images/kien-thuc//category/he-mat-troi/{{ post.image }}.webp" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="post-details padding-2-rem-lr padding-1-half-rem-tb bg-black text-center">
+                                        <a href="{{ post.url }}" title="{{ post.title }}" class="alt-font font-weight-600 text-extra-medium text-very-light-white-transparent">
+                                            {{ post.title }}
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
-                        </li>
-                        {% endif %}
-                    {% endfor %}
-                    <!-- end blog item -->
-                </ul>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                </div>
+                <!-- start slider navigation -->
+                <div class="swiper-button-next-nav swiper-button-next rounded-circle light slider-navigation-style-07 box-shadow-double-large"><i class="feather icon-feather-arrow-right"></i></div>
+                <div class="swiper-button-previous-nav swiper-button-prev rounded-circle light slider-navigation-style-07 box-shadow-double-large"><i class="feather icon-feather-arrow-left"></i></div>
+                <!-- end slider navigation -->
             </div>
         </div>
     </div>
 </section>
-<!-- end section -->
+<!-- Hết phần Mặt Trời và các hành tinh -->
+
+<!-- Các vệ tinh tự nhiên -->
+<section class="bg-dark padding-eleven-lr xl-padding-two-lr xs-no-padding-lr">
+    <div class="container">
+        <div class="row margin-3-rem-bottom md-margin-2-rem-bottom align-items-center">
+            <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
+                <h5 class="alt-font font-weight-600 text-white text-uppercase margin-5px-bottom letter-spacing-minus-1px">
+                   Các vệ tinh tự nhiên
+                </h5>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="swiper-container text-center" data-slider-options='{ "slidesPerView": 1, "loop": false, "navigation": { "nextEl": ".swiper-button-next-nav", "prevEl": ".swiper-button-previous-nav" }, "autoplay": { "delay": 3000, "disableOnInteraction": false }, "keyboard": { "enabled": true, "onlyInViewport": true }, "breakpoints": { "1200": { "slidesPerView": 4 }, "992": { "slidesPerView": 3 }, "768": { "slidesPerView": 3 } } }'>
+                    <div class="swiper-wrapper">
+                        {% for post in site.categories.Kien-thuc reversed %}
+                            {% if post.categories contains "Ve-tinh" %}
+                            <div class="swiper-slide padding-2-rem-lr">
+                                <div title="{{ post.title }}" class="blog-post border-radius-5px bg-white box-shadow-medium">
+                                    <div class="blog-post-image bg-medium-slate-blue">
+                                        <a href="{{ post.url }}" title="{{ post.title }}">
+                                            <img src="{{ site.baseurl }}/images/kien-thuc//category/he-mat-troi/ve-tinh/{{ post.image }}.webp" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="post-details padding-2-rem-lr padding-1-half-rem-tb bg-black text-center">
+                                        <a href="{{ post.url }}" title="{{ post.title }}" class="alt-font font-weight-600 text-extra-medium text-very-light-white-transparent">
+                                            {{ post.title }}
+                                            <br />
+                                            ({{ post.satellite-of }})
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                </div>
+                <!-- start slider navigation -->
+                <div class="swiper-button-next-nav swiper-button-next rounded-circle light slider-navigation-style-07 box-shadow-double-large"><i class="feather icon-feather-arrow-right"></i></div>
+                <div class="swiper-button-previous-nav swiper-button-prev rounded-circle light slider-navigation-style-07 box-shadow-double-large"><i class="feather icon-feather-arrow-left"></i></div>
+                <!-- end slider navigation -->
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Hết phần Các vệ tinh tự nhiên -->
