--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-05-oberon.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-05-oberon.html
@@ -1,11 +1,11 @@
 ---
 layout: know_detail
-title: "Oberon"
-satellite-of: "Sao Thiên Vương"
+title: "Triton"
+satellite-of: "Sao Hải Vương"
 date:   05-05-2021 00:00:05
 categories: [Kien-thuc, He-mat-troi, Ve-tinh]
-image: oberon
-model: oberon
+image: triton
+model: triton
 ---
 <div class="know_detail">
     <div class="container">
@@ -33,12 +33,12 @@ model: oberon
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
-                        <p><strong>Bán kính: </strong>761,4 km</p>
-                        <p><strong>Chu kỳ quay: </strong>13 ngày</p>
-                        <p><strong>Trọng lực: </strong>0,346 m/s²</p>
-                        <p><strong>Quỹ đạo: </strong>Sao Thiên Vương</p>
-                        <p><strong>Đã khám phá: </strong>11 tháng 1, 1787</p>
-                        <p><strong>Người khám phá: </strong>William Herschel</p>
+                        <p><strong>Bán kính: </strong>1.353,4 km</p>
+                        <p><strong>Chu kỳ quay: </strong>141 giờ</p>
+                        <p><strong>Trọng lực: </strong>0,779 m/s²</p>
+                        <p><strong>Quỹ đạo: </strong>Sao Hải Vương</p>
+                        <p><strong>Đã khám phá: </strong>1846</p>
+                        <p><strong>Người khám phá: </strong>William Lassell</p>
                     </div>
                 </div>
             </div>
@@ -48,9 +48,9 @@ model: oberon
         <div class="row">
             <div class="col-12 col-lg-12">
                 <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
-                    <p>Oberon là vệ tinh lớn và nằm phía ngoài cùng trong nhóm vệ tinh chính của Sao Thiên Vương. Đây là vệ tinh lớn và nặng thứ hai của Sao Thiên Vương, là vệ tinh nặng thứ 9 và là vật thể nặng thứ 21 trong Hệ Mặt Trời. Vệ tinh này do William Herschel phát hiện năm 1787, Oberon được đặt tên theo một nhân vật trong tác phẩm của Shakespeare Giấc mộng đêm hè. Một phần quỹ đạo của nó nằm phía ngoài từ quyển của Sao Thiên Vương.</p>
-                    <p>Oberon được cấu tạo từ băng và đá với lượng xấp xỉ bằng nhau, và có khả năng có sự phân dị giữa lõi đá và lớp phủ băng. Một tầng nước lỏng có thể tồn tại ở ranh giới giữa lõi và lớp phủ. Bề mặt của Oberon, có màu đen và đỏ nhạt, có lẽ ban đầu đã được định hình chủ yếu do va chạm với các tiểu hành tinh và sao chổi. Nó được bao phủ bởi nhiều hố va chạm đạt đường kính đến 210 km. Oberon sở hữu một hệ thống các hẻm núi được hình thành từ sự mở rộng các thành phần bên trong vào thời kỳ đầu tiến hoá của thiên thể này. Vệ tinh này có thể đã được hình thành từ đĩa bồi tụ bao quanh Sao Thiên Vương ngay sau khi hành tinh này hình thành.</p>
-                    <p>Cho đến năm 2010, hệ thống vệ tinh Sao Thiên Vương chỉ được nghiên cứu kỹ càng một lần bởi tàu không gian Voyager 2 vào tháng 1 năm 1986. Nó đã chụp nhiều hình ảnh về Oberon, cho phép con người có thể lập được bản đồ về 40% diện tích bề mặt Oberon.</p>
+                    <p>Triton là vệ tinh tự nhiên lớn nhất của Sao Hải Vương và là vệ tinh đầu tiên của Sao Hải Vương được phát hiện. Nó được khám phá vào ngày 10 tháng 10 năm 1846 bởi nhà thiên văn học người Anh William Lassell. Đây là vệ tinh lớn duy nhất trong Hệ Mặt Trời có quỹ đạo nghịch hành, quỹ đạo theo hướng ngược với vòng quay của hành tinh. Với đường kính 2.710 kilômét (1.680 mi), đây là vệ tinh lớn thứ bảy trong Hệ Mặt Trời, vệ tinh duy nhất của Sao Hải Vương đủ lớn để ở trạng thái cân bằng thủy tĩnh và vệ tinh hành tinh lớn thứ hai so với hành tinh của nó, sau Mặt Trăng của Trái Đất. Do quỹ đạo nghịch hành và thành phần tương tự như Sao Diêm Vương, Triton được cho là một hành tinh lùn bị bắt từ vành đai Kuiper.</p>
+                    <p>Triton được Camille Flammarion đặt tên theo vị thần biển Triton trong thần thoại Hy Lạp, con trai của thần Poseidon và nữ thần biển Amphitrite, năm 1880. Có lẽ hơi lạ là William Lassell, người phát hiện lại không đặt tên cho vệ tinh này vì chỉ vài năm sau, ông đã đặt tên cho những vệ tinh mới do ông phát hiện như mặt trăng thứ tám của Sao Thổ (Hyperion) và mặt trăng thứ ba và bốn của Sao Thiên Vương (Ariel và Umbriel).</p>
+                    <p>Tuy nhiên chỉ đến khi mặt trăng thứ hai của Sao Hải Vương là Nereid được phát hiện thì Triton mới trở thành tên gọi chính thức của vệ tinh này.</p>
                 </div>
             </div>
         </div>
