--- a/lich-thien-van/nam-2022.html
+++ b/lich-thien-van/nam-2022.html
@@ -9,7 +9,7 @@ title: Lịch thiên văn năm 2022
 <section class="bg-dark padding-eleven-lr xl-padding-two-lr xs-no-padding-lr">
     <div class="container-fluid">
         <div class="row margin-3-rem-bottom md-margin-2-rem-bottom align-items-center">
-            <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
+            <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom">
                 <h5 class="alt-font font-weight-600 text-white text-uppercase margin-5px-bottom letter-spacing-minus-1px">
                     {{ page.title}}
                 </h5>
@@ -25,7 +25,7 @@ title: Lịch thiên văn năm 2022
                     <li class="grid-sizer"></li>
                     <!-- start blog item -->
                     {% for post in yearMonth.items reversed %}
-                        <li class="grid-item wow animate__fadeIn">
+                        <li class="grid-item">
                             <div title="{{ post.title }}" class="blog-post border-radius-5px bg-white box-shadow-medium">
                                 <div class="blog-post-image bg-medium-slate-blue">
                                     <a href="{{ post.url }}" title="{{ post.title }}">
