--- a/kien-thuc/he-mat-troi.html
+++ b/kien-thuc/he-mat-troi.html
@@ -7,7 +7,7 @@ title: Hệ Mặt Trời
 <section class="bg-dark padding-eleven-lr xl-padding-two-lr xs-no-padding-lr">
     <div class="container">
         <div class="row margin-3-rem-bottom md-margin-2-rem-bottom align-items-center">
-            <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
+            <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom">
                 <h5 class="alt-font font-weight-600 text-white text-uppercase margin-5px-bottom letter-spacing-minus-1px">
                    Mặt Trời và các hành tinh
                 </h5>
@@ -51,7 +51,7 @@ title: Hệ Mặt Trời
 <section class="bg-dark padding-eleven-lr xl-padding-two-lr xs-no-padding-lr">
     <div class="container">
         <div class="row margin-3-rem-bottom md-margin-2-rem-bottom align-items-center">
-            <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom wow animate__fadeIn" data-wow-delay="0.1s">
+            <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom">
                 <h5 class="alt-font font-weight-600 text-white text-uppercase margin-5px-bottom letter-spacing-minus-1px">
                    Các vệ tinh tự nhiên
                 </h5>
