--- a/kien-thuc/he-mat-troi.html
+++ b/kien-thuc/he-mat-troi.html
@@ -11,6 +11,7 @@ title: Hệ Mặt Trời
                 <h5 class="alt-font font-weight-600 text-white text-uppercase margin-5px-bottom letter-spacing-minus-1px">
                    Mặt Trời và các hành tinh
                 </h5>
+                <p class="text-center text-white">Mặt Trời và các hành tinh trong Hệ Mặt Trời</p>
             </div>
         </div>
         <div class="row">
@@ -48,13 +49,14 @@ title: Hệ Mặt Trời
 <!-- Hết phần Mặt Trời và các hành tinh -->
 
 <!-- Các vệ tinh tự nhiên -->
-<section class="bg-dark padding-eleven-lr xl-padding-two-lr xs-no-padding-lr">
+<section class="bg-dark padding-eleven-lr xl-padding-two-lr xs-no-padding-lr pt-0">
     <div class="container">
         <div class="row margin-3-rem-bottom md-margin-2-rem-bottom align-items-center">
             <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom">
                 <h5 class="alt-font font-weight-600 text-white text-uppercase margin-5px-bottom letter-spacing-minus-1px">
-                   Các vệ tinh tự nhiên
+                   Vệ tinh tự nhiên
                 </h5>
+                <p class="text-center text-white">Danh sách vệ tinh tự nhiên của các hành tinh trong Hệ Mặt Trời</p>
             </div>
         </div>
         <div class="row">
