--- a/kien-thuc/kien-thuc.html
+++ b/kien-thuc/kien-thuc.html
@@ -11,6 +11,7 @@ title: Kiến thức
       <div class="row margin-6-rem-bottom md-margin-5-rem-bottom align-items-center">
           <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom">
               <h5 class="alt-font font-weight-600 text-white text-uppercase margin-5px-bottom letter-spacing-minus-1px">{{ item.title | escape }}</h5>
+              <p class="text-center text-white">Danh sách chủ đề kiến thức
           </div>
       </div>
       <div class="row text-center row-cols-1 row-cols-lg-4 row-cols-sm-2">
