--- a/_posts/kien-thuc/he-mat-troi/tong-hop/2021-07-01-co-bao-nhieu-hanh-tinh-trong-he-mat-troi-qua-cac-nam.html
+++ b/_posts/kien-thuc/he-mat-troi/tong-hop/2021-07-01-co-bao-nhieu-hanh-tinh-trong-he-mat-troi-qua-cac-nam.html
@@ -41,11 +41,23 @@ image: co-bao-nhieu-hanh-tinh-trong-he-mat-troi-qua-cac-nam
                             <h6 class="alt-font font-weight-600">
                                 Chú thích:
                             </h6>
-                            <p><strong>Chu kỳ quay: </strong>248 năm</p>
-                            <p><strong>Bán kính: </strong>1.188,3 km</p>
-                            <p><strong>Đã khám phá: </strong>18 tháng 2, 1930</p>
-                            <p><strong>Các mặt trăng: </strong>Charon, Nix, Hydra, Styx, Kerberos</p>
-                            <p><strong>Những người khám phá: </strong>Clyde W. Tombaugh, Hōei Nojiri, Elizabeth Langdon Williams</p>
+                            <div class="row">
+                                <div class="col-12 col-lg-4 margin-15px-bottom">
+                                    <p><strong>Sun: </strong>Mặt Trời</p>
+                                    <p><strong>Mercury: </strong>Sao Thủy</p>
+                                    <p><strong>Venus: </strong>Sao Kim</p>
+                                </div>
+                                <div class="col-12 col-lg-4 margin-15px-bottom">
+                                    <p><strong>Earth: </strong>Trái Đất</p>
+                                    <p><strong>Mars: </strong>Sao Hỏa</p>
+                                    <p><strong>Jupiter: </strong>Sao Mộc</p>
+                                </div>
+                                <div class="col-12 col-lg-4">
+                                    <p><strong>Saturn: </strong>Sao Thổ</p>
+                                    <p><strong>Uranus: </strong>Sao Thiên Vương</p>
+                                    <p><strong>Neptune: </strong>Sao Hải Vương</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
