--- a/kien-thuc/he-mat-troi.html
+++ b/kien-thuc/he-mat-troi.html
@@ -96,7 +96,7 @@ title: Hệ Mặt Trời
 <!-- Hết phần Các vệ tinh tự nhiên -->
 
 <!-- Hành tinh lùn -->
-<section class="bg-dark padding-eleven-lr xl-padding-two-lr xs-no-padding-lr">
+<section class="bg-dark padding-eleven-lr xl-padding-two-lr xs-no-padding-lr pt-0">
     <div class="container">
         <div class="row margin-3-rem-bottom md-margin-2-rem-bottom align-items-center">
             <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom">
@@ -141,7 +141,7 @@ title: Hệ Mặt Trời
 <!-- Hết phần Hành tinh lùn -->
 
 <!-- Kiến thức tổng hợp -->
-<section class="bg-dark padding-eleven-lr xl-padding-two-lr xs-no-padding-lr">
+<section class="bg-dark padding-eleven-lr xl-padding-two-lr xs-no-padding-lr pt-0">
     <div class="container">
         <div class="row margin-3-rem-bottom md-margin-2-rem-bottom align-items-center">
             <div class="col-12 col-lg-12 col-md-12 text-center sm-margin-10px-bottom">
