--- a/_posts/kien-thuc/he-mat-troi/tong-hop/2021-07-01-ban-co-the-nhay-cao-bao-nhieu-met-tren-cac-thien-the-trong-he-mat-troi.html
+++ b/_posts/kien-thuc/he-mat-troi/tong-hop/2021-07-01-ban-co-the-nhay-cao-bao-nhieu-met-tren-cac-thien-the-trong-he-mat-troi.html
@@ -129,7 +129,7 @@ image: ban-co-the-nhay-cao-bao-nhieu-met-tren-cac-thien-the-trong-he-mat-troi
                                     <td class="height">0.43</td>
                                 </tr>
                                 <tr>
-                                    <td class="name">Sao Thiên Vương (Hành tinh lùn)</td>
+                                    <td class="name">Sao Diêm Vương (Hành tinh lùn)</td>
                                     <td class="grav">0.66</td>
                                     <td class="vesc">4428</td>
                                     <td class="duration">9.48</td>
