--- a/app/he-mat-troi/kham-pha-vu-tru-bang-phi-thuyen/index.html
+++ b/app/he-mat-troi/kham-pha-vu-tru-bang-phi-thuyen/index.html
@@ -689,7 +689,7 @@
 			<div id="halleys-comet">			
 				<div class="padded-element marker offset">
 					<span class="line"></span>
-					<h3 class="object w">Halley's Comet</h3>
+					<h3 class="object w">Sao chổi Halley</h3>
 					<h4>62,800,000km</h4>
 					<p class="desc w">Cách tiếp cận gần nhất với Trái đất (1986)</p>
 				</div>
