--- a/_posts/kien-thuc/he-mat-troi/tong-hop/2021-07-01-kham-pha-vu-tru-bang-phi-thuyen.html
+++ b/_posts/kien-thuc/he-mat-troi/tong-hop/2021-07-01-kham-pha-vu-tru-bang-phi-thuyen.html
@@ -37,7 +37,10 @@ image: kham-pha-vu-tru-bang-phi-thuyen
                 <div class="row">
                     <div class="col-12 col-lg-12 margin-30px-bottom">
                         <div class="iframe_box">
+                            <button class="button_open-fullscreen" onclick="openFullScreen();">Xem toàn màn hình</button>
+                            <button class="button_close-fullscreen" onclick="closeFullScreen();">Thoát</button>
                             <iframe 
+                                id="fullscreen"
                                 src="{{ site.baseurl }}/app/he-mat-troi/kham-pha-vu-tru-bang-phi-thuyen/index.html" 
                                 title="Khám phá vũ trụ cùng phi thuyền"
                             >
@@ -49,3 +52,5 @@ image: kham-pha-vu-tru-bang-phi-thuyen
         </div>
     </div>
 </section>
+
+<script src="{{ "{{ site.baseurl }}/js/fullscreen.js" | relative_url }}"></script>
