--- a/_posts/kien-thuc/he-mat-troi/tong-hop/2021-07-01-kham-pha-vu-tru-bang-phi-thuyen.html
+++ b/_posts/kien-thuc/he-mat-troi/tong-hop/2021-07-01-kham-pha-vu-tru-bang-phi-thuyen.html
@@ -39,6 +39,7 @@ image: kham-pha-vu-tru-bang-phi-thuyen
                         <div class="iframe_box">
                             <button class="button_open-fullscreen" onclick="openFullScreen();">Xem toàn màn hình</button>
                             <button class="button_close-fullscreen" onclick="closeFullScreen();">Thoát</button>
+                            <a target="_blank" href="{{ site.baseurl }}/app/he-mat-troi/kham-pha-vu-tru-bang-phi-thuyen/index.html">Xem toàn màn hình</a>
                             <iframe 
                                 id="fullscreen"
                                 src="{{ site.baseurl }}/app/he-mat-troi/kham-pha-vu-tru-bang-phi-thuyen/index.html" 
