--- a/_posts/kien-thuc/he-mat-troi/tong-hop/2021-07-01-ban-co-the-nhay-cao-bao-nhieu-met-tren-cac-thien-the-trong-he-mat-troi.html
+++ b/_posts/kien-thuc/he-mat-troi/tong-hop/2021-07-01-ban-co-the-nhay-cao-bao-nhieu-met-tren-cac-thien-the-trong-he-mat-troi.html
@@ -31,6 +31,10 @@ image: ban-co-the-nhay-cao-bao-nhieu-met-tren-cac-thien-the-trong-he-mat-troi
                         {{ page.title | escape }}
                     </h5>
                     <p class="text-center text-white margin-30px-bottom">Nếu bạn có thể nhảy cao nửa mét trên Trái đất, bạn có thể nhảy cao bao nhiêu mét trên các thiên thể khác trong Hệ Mặt trời? Hãy cẩn thận khi nhảy trên các thiên thể nhỏ - bạn có thể không bao giờ quay trở lại.</p>
+                    <p class="text-white margin-30px-bottom"><i>Lưu ý: Hãy nhấn "Xem toàn màn hình" để có trải nghiệm tốt nhất.</i></p>
+                    <div class="margin-30px-bottom">
+                        <a target="_blank" class="open-new-tab" href="{{ site.baseurl }}/app/he-mat-troi/ban-co-the-nhay-cao-bao-nhieu-met-tren-cac-thien-the-trong-he-mat-troi/index.html"><i class="feather icon-feather-maximize margin-10px-right"></i> Xem toàn màn hình</a>
+                    </div>
                 </div>
             </div>
             <div>
