--- a/_posts/kien-thuc/he-mat-troi/tong-hop/2021-07-01-khoang-cach-cac-hanh-tinh-den-mat-troi-neu-mat-trang-chi-to-bang-mot-diem-anh.html
+++ b/_posts/kien-thuc/he-mat-troi/tong-hop/2021-07-01-khoang-cach-cac-hanh-tinh-den-mat-troi-neu-mat-trang-chi-to-bang-mot-diem-anh.html
@@ -36,6 +36,10 @@ image: khoang-cach-cac-hanh-tinh-den-mat-troi-neu-mat-trang-chi-to-bang-mot-diem
                         class="margin-60px-bottom border-radius-6px"
                         alt="Bạn có thể nhấn vào các biểu tượng hành tinh như hình dưới đây để có thể di chuyển tới các thiên thể nhanh chóng"
                     />
+                    <p class="text-white margin-30px-bottom"><i>Lưu ý: Hãy nhấn "Xem toàn màn hình" để có trải nghiệm tốt nhất. Và trang này trải nghiệm tốt nhất trên máy tính.</i></p>
+                    <div class="margin-30px-bottom">
+                        <a target="_blank" class="open-new-tab" href="{{ site.baseurl }}/app/he-mat-troi/khoang-cach-cac-hanh-tinh-den-mat-troi-neu-mat-trang-chi-to-bang-mot-diem-anh/index.html"><i class="feather icon-feather-maximize margin-10px-right"></i> Xem toàn màn hình</a>
+                    </div>
                 </div>
             </div>
             <div>
