--- a/_posts/kien-thuc/he-mat-troi/tong-hop/2021-07-01-kham-pha-vu-tru-bang-phi-thuyen.html
+++ b/_posts/kien-thuc/he-mat-troi/tong-hop/2021-07-01-kham-pha-vu-tru-bang-phi-thuyen.html
@@ -30,16 +30,17 @@ image: kham-pha-vu-tru-bang-phi-thuyen
                     <h5 class="alt-font font-weight-600 text-white">
                         {{ page.title | escape }}
                     </h5>
-                    <p class="text-center text-white margin-30px-bottom">Khám phá vũ trụ cùng phi thuyền - Phiên bản tương tác</p>
+                    <p class="text-white margin-30px-bottom">Khám phá vũ trụ cùng phi thuyền - Phiên bản tương tác</p>
+                    <p class="text-white margin-30px-bottom"><i>Lưu ý: Hãy nhấn "Xem toàn màn hình" để có trải nghiệm tốt nhất.</i></p>
+                    <div class="margin-30px-bottom">
+                        <a target="_blank" class="open-new-tab" href="{{ site.baseurl }}/app/he-mat-troi/kham-pha-vu-tru-bang-phi-thuyen/index.html"><i class="feather icon-feather-maximize margin-10px-right"></i> Xem toàn màn hình</a>
+                    </div>
                 </div>
             </div>
             <div>
                 <div class="row">
                     <div class="col-12 col-lg-12 margin-30px-bottom">
                         <div class="iframe_box">
-                            <button class="button_open-fullscreen" onclick="openFullScreen();">Xem toàn màn hình</button>
-                            <button class="button_close-fullscreen" onclick="closeFullScreen();">Thoát</button>
-                            <a target="_blank" href="{{ site.baseurl }}/app/he-mat-troi/kham-pha-vu-tru-bang-phi-thuyen/index.html">Xem toàn màn hình</a>
                             <iframe 
                                 id="fullscreen"
                                 src="{{ site.baseurl }}/app/he-mat-troi/kham-pha-vu-tru-bang-phi-thuyen/index.html" 
@@ -53,5 +54,3 @@ image: kham-pha-vu-tru-bang-phi-thuyen
         </div>
     </div>
 </section>
-
-<script src="{{ "{{ site.baseurl }}/js/fullscreen.js" | relative_url }}"></script>
