--- a/_posts/kien-thuc/he-mat-troi/tong-hop/2021-07-01-khoang-cach-cac-hanh-tinh-den-mat-troi-neu-mat-trang-chi-to-bang-mot-diem-anh.html
+++ b/_posts/kien-thuc/he-mat-troi/tong-hop/2021-07-01-khoang-cach-cac-hanh-tinh-den-mat-troi-neu-mat-trang-chi-to-bang-mot-diem-anh.html
@@ -32,7 +32,7 @@ image: khoang-cach-cac-hanh-tinh-den-mat-troi-neu-mat-trang-chi-to-bang-mot-diem
                     </h5>
                     <p class="text-center text-white margin-30px-bottom">Bạn có thể nhấn vào các biểu tượng hành tinh như hình dưới đây để có thể di chuyển tới các thiên thể khác.</p>
                     <img 
-                        src="{{ site.baseurl }}/images/kien-thuc/he-mat-troi/post/tong-hop/khoang-cach-cac-hanh-tinh-den-mat-troi-neu-mat-trang-chi-to-bang-mot-diem-anh/mo-ta.webp" 
+                        src="{{ site.baseurl }}/images/kien-thuc/he-mat-troi/post/tong-hop/khoang-cach-cac-hanh-tinh-den-mat-troi-neu-mat-trang-chi-to-bang-mot-diem-anh/mo-ta.jpg" 
                         class="margin-60px-bottom border-radius-6px"
                         alt="Bạn có thể nhấn vào các biểu tượng hành tinh như hình dưới đây để có thể di chuyển tới các thiên thể nhanh chóng"
                     />
