--- a/_posts/lich-thien-van/nam2022/thang4/2022-04-30-nhat-thuc-mot-phan.html
+++ b/_posts/lich-thien-van/nam2022/thang4/2022-04-30-nhat-thuc-mot-phan.html
@@ -21,3 +21,47 @@ image: nhat-thuc-mot-phan
 <p class="text-white">Nhật thực một phần diễn ra khi Mặt Trăng che khuất chỉ một phần của đĩa Mặt Trời, đôi khi giống như vết cắn vào một chiếc bánh.</p>
 <p class="text-white">Nhật thực một phần chỉ có thể quan sát an toàn với một chiếc kính lọc Mặt Trời chuyên dụng hoặc quan sát thông qua bóng phản xạ của Mặt Trời.</p>
 <p class="text-white">Nhật thực một phần này sẽ có thể nhìn thấy trên hầu hết các vùng phía đông nam Thái Bình Dương và nam Nam Mỹ. Nó sẽ được nhìn thấy rõ nhất từ Argentina với độ phủ 53%.</p>
+
+<p class="text-white font-weight-600">Đường đi của bóng Mặt Trời 2D</p>
+<figure>
+    <video controls>
+        <source src="{{ site.baseurl }}/video/lich-thien-van/nam-2022/2022-04-30-nhat-thuc-mot-phan-2d.webm" type="video/webm">
+    </video>
+    <figcaption>
+        <div class="legend__ec-coverage">
+            <div class="row">
+                <div class="col-md-6 ec-coverage__title">
+                    <div>Phần Mặt Trời bị Mặt Trăng che khuất</div>
+                    <div>(Vùng tối tượng trưng cho ban đêm và hoàng hôn)</div>
+                </div>
+                <div class="col-md-6">
+                    <p><span class="figkey" style="background:#fff;" title="Nhật thực hoàn toàn không nhìn thấy được."></span> 0%</p>
+                    <p><span class="figkey" style="background:#ffbf59;" title="Hơn 0% Mặt Trời bị che phủ."></span> &gt;0%</p>
+                    <p><span class="figkey" style="background:#ff9c38;" title="Hơn 40% Mặt Trời bị che phủ."></span> 40%</p>
+                </div>
+            </div>
+        </div>
+    </figcaption>
+</figure>
+
+<p class="text-white font-weight-600">Đường đi của bóng Mặt Trời 3D</p>
+<figure>
+    <video controls>
+        <source src="{{ site.baseurl }}/video/lich-thien-van/nam-2022/2022-04-30-nhat-thuc-mot-phan-3d.webm" type="video/webm">
+    </video>
+    <figcaption>
+        <div class="legend__ec-coverage">
+            <div class="row">
+                <div class="col-md-6 ec-coverage__title">
+                    <div>Phần Mặt Trời bị Mặt Trăng che khuất</div>
+                    <div>(Vùng tối tượng trưng cho ban đêm và hoàng hôn)</div>
+                </div>
+                <div class="col-md-6">
+                    <p><span class="figkey" style="background:#fff;" title="Nhật thực hoàn toàn không nhìn thấy được."></span> 0%</p>
+                    <p><span class="figkey" style="background:#ffbf59;" title="Hơn 0% Mặt Trời bị che phủ."></span> &gt;0%</p>
+                    <p><span class="figkey" style="background:#ff9c38;" title="Hơn 40% Mặt Trời bị che phủ."></span> 40%</p>
+                </div>
+            </div>
+        </div>
+    </figcaption>
+</figure>
