--- a/_posts/lich-thien-van/nam2022/thang5/2022-05-16-nguyet-thuc-toan-phan.html
+++ b/_posts/lich-thien-van/nam2022/thang5/2022-05-16-nguyet-thuc-toan-phan.html
@@ -20,3 +20,27 @@ image: nguyet-thuc-toan-phan
 
 <p class="text-white">Một Nguyệt thực toàn phần sẽ diễn ra khi Mặt Trăng hoàn toàn đi ngang qua vùng bóng tối của Trái Đất. Trong suốt quá trình Nguyệt thực này, Mặt Trăng sẽ dần dần bị tối đi và sau đó chuyển sang màu đỏ máu.</p>
 <p class="text-white">Nguyệt thực sẽ có thể nhìn thấy trên toàn bộ Bắc Mỹ, Greenland, Đại Tây Dương và một phần của Tây Âu và Tây Phi.</p>
+
+<p class="text-white font-weight-600">Đường đi của Nguyệt Thực 2D</p>
+<figure>
+    <video controls>
+        <source src="{{ site.baseurl }}/video/lich-thien-van/nam-2022/2022-05-16-nguyet-thuc-toan-phan-2d.webm" type="video/webm">
+    </video>
+    <figcaption>
+        <div class="ecl-animcap">
+            <div class="row">
+                <div class="col-md-12 ecl-animcap__title">
+                    <div><strong>Ghi chú phần bòng tối</strong> (Vùng tối từ từ di chuyển trên bề mặt Trái Đất)</div>
+                </div>
+                <div class="col-md-12">
+                    <p><span class="figkey" style="background:#6c6e94;"></span> Đêm, Mặt Trăng lên cao trên bầu trời.</p>
+                    <p><span class="figkey" style="background:#9c9ebc;"></span> Mặt Trăng từ 12 đến 18 độ so với đường chân trời.</p>
+                    <p><span class="figkey" style="background:#b4b6cc;"></span> Mặt Trăng từ 6 đến 12 độ so với đường chân trời. Đảm bảo bạn có tầm nhìn tương đối tốt.</p>
+                    <p><span class="figkey" style="background:#dcdae4;"></span> Mặt trăng từ 0 đến 6 độ so với đường chân trời. Có thể khó nhìn thấy do độ sáng và tầm nhìn.</p>
+                    <p><span class="figkey" style="background:#fff;"></span> Ban ngày, cả Mặt Trăng và nguyệt thực đều không nhìn thấy được.</p>
+                    <p><strong>Chú ý: </strong> Hoàng hôn sẽ ảnh hưởng đến khả năng ngắm nguyệt thực, cũng như thời tiết.</p>
+                </div>
+            </div>
+        </div>
+    </figcaption>
+</figure>
